fix(storybook): Add correct overflow to the location finder panel Card: https://app.clickup.com/t/863fz7r9p

--- a/src/styles/elements/_location-finder.css
+++ b/src/styles/elements/_location-finder.css
@@ -43,7 +43,7 @@
     --toujou-location-finder-panel-width: 100%;
     --toujou-location-finder-panel-height: 240px;
     --toujou-location-finder-panel-left: var(--toujou-location-finder-padding);
-    --toujou-location-finder-panel-overflow: initial;
+    --toujou-location-finder-panel-overflow: visible;
 
     --toujou-location-finder-sidebar-locator-icon-height: var(--font-size-m);
     --toujou-location-finder-sidebar-locator-icon-width: var(--font-size-m);
